--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sass": "^1.58.3",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
